Fixed bug #30140 (Problem with array in static properties)